# python-fp

./: .env.example  .gitignore  .pre-commit-config.yaml  Gemfile  README.md  coverage.lcov  pyproject.toml  sb.py  tools_count_sample.py
.github/workflows/: gh-pages.yml  pypi-publish.yml  pytest-action.yml  unit-tests.yml
demo/: demo-xeffect.py  demo-xiter.py  demo.py
demo/combined/: main.py
demo/xeffect/: main.py  operation.py
demo/xiter/: main.py
demo/xlist/: domain.py  main.py  operation.py
docs/: .gitignore  _config.yml  index.md
docs/pages/: about_typing.md  functional_programming_in_python.md  functions.md  quickstart.md  utils.md
docs/pages/about_function/: immutability.md  index.md  typing.md
docs/pages/collections/: index.md  xdict.md  xiter.md  xlist.md
docs/pages/effects/: index.md  pattern_matching.md
docs/pages/results/: index.md  pattern_matching.md  wrapping_python.md
docs/pages/samples/: index.md  word_count.md
src/xfp/: __init__.py  tools.py  utils.py  xdict.py  xiter.py  xlist.py
src/xfp/functions/: __init__.py
src/xfp/stubs/: __init__.py
src/xfp/xresult/: __init__.py  _xresult.py  xeither.py  xoption.py  xtry.py
tests/: test_eval.py
tests/xdict/: test_xdict_constructors.py  test_xdict_methods.py
tests/xiter/: test_xiter_constructors.py  test_xiter_methods.py
tests/xlist/: test_xlist_constructors.py  test_xlist_methods.py
tests/xresult/: test_xeither.py  test_xopt.py  test_xresult_methods.py  test_xtry.py
xfp/: __init__.py  utils.py  xdict.py  xeffect.py  xiter.py  xlist.py
xfp/tests/: test_eval.py  test_should_fail.py
xfp/tests/xdict/: test_xdict_constructors.py  test_xdict_methods.py
xfp/tests/xeffect/: test_xeffect_methods.py  test_xeither.py  test_xopt.py  test_xtry.py
xfp/tests/xiter/: test_xiter_methods.py
xfp/xeffect/: __init__.py  _xeffect.py  xeither.py  xoption.py  xtry.py
xfp/xresult/: __init__.py  _xresult.py  xeither.py  xoption.py  xtry.py
(+2 files in other folders)
