[project]
name = "xfp"
version = "1.1.0"
description = "functional programming library for python"
authors = [
    { name = "Sébastien VEY" },
    { name = "Jérome LIERMANN" }
]
readme = "README.md"
requires-python = "~=3.12.0"

dependencies = [
    "deprecation~=2.1.0",
]

[dependency-groups]
dev = [
    "ruff~=0.4.4",
    "pre-commit~=3.7.0",
    "ipykernel~=6.29.4",
    "pyright~=1.1.362",
]

doc = ["pdoc~=14.7.0"]

test = [
    "pytest~=8.2.0",
    "pytest-cov~=5.0.0",
    "hypothesis~=6.118.8",
    "mypy>=1.14.1",
    "pytest-mock~=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
